_gfomxi -> explore-filter-menu__list-label

--- a/signup_login.html
+++ b/signup_login.html
@@ -2080,7 +2080,7 @@
                                     class="explore-filter-menu__list-padding dir dir-ltr">
                                     <label for="sms-row-radio-button" class="cursor-pointer">
                                       <div class="flex">
-                                        <div class="_gfomxi">
+                                        <div class="explore-filter-menu__list-label">
                                           <div class="flex">
                                             <div class="_13r0hxum">
                                               <div class="_miupcl"><svg viewBox="0 0 32 32"
@@ -2114,7 +2114,7 @@
                                     aria-labelledby="whatsapp-row-title" class="explore-filter-menu__list-padding dir dir-ltr"><label
                                       for="whatsapp-row-radio-button" class="cursor-pointer">
                                       <div class="flex">
-                                        <div class="_gfomxi">
+                                        <div class="explore-filter-menu__list-label">
                                           <div class="flex">
                                             <div class="_13r0hxum">
                                               <div class="_miupcl"><svg viewBox="0 0 32 32"
@@ -2149,7 +2149,7 @@
                                     aria-labelledby="phone_call-row-title" class="explore-filter-menu__list-padding dir dir-ltr"><label
                                       for="phone_call-row-radio-button" class="cursor-pointer">
                                       <div class="flex">
-                                        <div class="_gfomxi">
+                                        <div class="explore-filter-menu__list-label">
                                           <div class="flex">
                                             <div class="_13r0hxum">
                                               <div class="_miupcl"><svg viewBox="0 0 32 32"
@@ -5341,7 +5341,7 @@
                                     class="explore-filter-menu__list-padding dir dir-ltr">
                                     <label for="sms-row-radio-button" class="cursor-pointer">
                                       <div class="flex">
-                                        <div class="_gfomxi">
+                                        <div class="explore-filter-menu__list-label">
                                           <div class="flex">
                                             <div class="_13r0hxum">
                                               <div class="_miupcl"><svg viewBox="0 0 32 32"
@@ -5375,7 +5375,7 @@
                                     aria-labelledby="whatsapp-row-title" class="explore-filter-menu__list-padding dir dir-ltr"><label
                                       for="whatsapp-row-radio-button" class="cursor-pointer">
                                       <div class="flex">
-                                        <div class="_gfomxi">
+                                        <div class="explore-filter-menu__list-label">
                                           <div class="flex">
                                             <div class="_13r0hxum">
                                               <div class="_miupcl"><svg viewBox="0 0 32 32"
@@ -5410,7 +5410,7 @@
                                     aria-labelledby="phone_call-row-title" class="explore-filter-menu__list-padding dir dir-ltr"><label
                                       for="phone_call-row-radio-button" class="cursor-pointer">
                                       <div class="flex">
-                                        <div class="_gfomxi">
+                                        <div class="explore-filter-menu__list-label">
                                           <div class="flex">
                                             <div class="_13r0hxum">
                                               <div class="_miupcl"><svg viewBox="0 0 32 32"
