_5kaapu -> flex-items-center

--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -333,7 +333,7 @@
                                                 </div>
                                               </div>
                                               <div class="_hkscf7">
-                                                <div class="_5kaapu">
+                                                <div class="flex-items-center">
                                                   <div class="_10a7w5f">
                                                     <div class="_1h3cgic">
                                                       ₱1.00
@@ -412,7 +412,7 @@
                                                 </div>
                                               </div>
                                               <div class="_hkscf7">
-                                                <div class="_5kaapu">
+                                                <div class="flex-items-center">
                                                   <div class="_10a7w5f">
                                                     <div class="_1h3cgic">
                                                       ₱339.26
@@ -491,7 +491,7 @@
                                                 </div>
                                               </div>
                                               <div class="_hkscf7">
-                                                <div class="_5kaapu">
+                                                <div class="flex-items-center">
                                                   <div class="_10a7w5f">
                                                     <div class="_1h3cgic">
                                                       ₱211.86
@@ -820,7 +820,7 @@
                                                   </div>
                                                 </div>
                                                 <div class="_hkscf7">
-                                                  <div class="_5kaapu">
+                                                  <div class="flex-items-center">
                                                     <div class="_10a7w5f">
                                                       <div class="_1h3cgic">
                                                         ₱1.00
@@ -901,7 +901,7 @@
                                                   </div>
                                                 </div>
                                                 <div class="_hkscf7">
-                                                  <div class="_5kaapu">
+                                                  <div class="flex-items-center">
                                                     <div class="_10a7w5f">
                                                       <div class="_1h3cgic">
                                                         ₱339.26
@@ -982,7 +982,7 @@
                                                   </div>
                                                 </div>
                                                 <div class="_hkscf7">
-                                                  <div class="_5kaapu">
+                                                  <div class="flex-items-center">
                                                     <div class="_10a7w5f">
                                                       <div class="_1h3cgic">
                                                         ₱211.86
