--- a/signup_login.html
+++ b/signup_login.html
@@ -2092,7 +2092,7 @@
                                                   </path>
                                                 </svg></div>
                                             </div>
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <div>
                                                 <div id="sms-row-title" class="_gw4xx4"><span class="_pgfqnw">Text
                                                     message (SMS)</span></div>
@@ -2101,7 +2101,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_5kaapu">
+                                        <div class="flex-items-center">
                                           <div class="_1mqc21n"><input aria-labelledby="sms-row-title"
                                               aria-describedby="sms-row-subtitle" id="sms-row-radio-button"
                                               class="_g4rlqtx" type="radio" value="TEXT" checked=""></div>
@@ -2126,7 +2126,7 @@
                                                   </path>
                                                 </svg></div>
                                             </div>
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <div>
                                                 <div id="whatsapp-row-title" class="_gw4xx4"><span
                                                     class="_pgfqnw">WhatsApp</span></div>
@@ -2136,7 +2136,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_5kaapu">
+                                        <div class="flex-items-center">
                                           <div class="_1mqc21n"><input aria-labelledby="whatsapp-row-title"
                                               aria-describedby="whatsapp-row-subtitle" id="whatsapp-row-radio-button"
                                               class="_83s1a2" type="radio" value="WHATSAPP"></div>
@@ -2161,7 +2161,7 @@
                                                   </path>
                                                 </svg></div>
                                             </div>
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <div>
                                                 <div id="phone_call-row-title" class="_gw4xx4"><span
                                                     class="_pgfqnw">Phone call</span></div>
@@ -2171,7 +2171,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_5kaapu">
+                                        <div class="flex-items-center">
                                           <div class="_1mqc21n"><input aria-labelledby="phone_call-row-title"
                                               aria-describedby="phone_call-row-subtitle"
                                               id="phone_call-row-radio-button" class="_83s1a2" type="radio"
@@ -5353,7 +5353,7 @@
                                                   </path>
                                                 </svg></div>
                                             </div>
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <div>
                                                 <div id="sms-row-title" class="_gw4xx4"><span class="_pgfqnw">Text
                                                     message (SMS)</span></div>
@@ -5362,7 +5362,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_5kaapu">
+                                        <div class="flex-items-center">
                                           <div class="_1mqc21n"><input aria-labelledby="sms-row-title"
                                               aria-describedby="sms-row-subtitle" id="sms-row-radio-button"
                                               class="_g4rlqtx" type="radio" value="TEXT" checked=""></div>
@@ -5387,7 +5387,7 @@
                                                   </path>
                                                 </svg></div>
                                             </div>
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <div>
                                                 <div id="whatsapp-row-title" class="_gw4xx4"><span
                                                     class="_pgfqnw">WhatsApp</span></div>
@@ -5397,7 +5397,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_5kaapu">
+                                        <div class="flex-items-center">
                                           <div class="_1mqc21n"><input aria-labelledby="whatsapp-row-title"
                                               aria-describedby="whatsapp-row-subtitle" id="whatsapp-row-radio-button"
                                               class="_83s1a2" type="radio" value="WHATSAPP"></div>
@@ -5422,7 +5422,7 @@
                                                   </path>
                                                 </svg></div>
                                             </div>
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <div>
                                                 <div id="phone_call-row-title" class="_gw4xx4"><span
                                                     class="_pgfqnw">Phone call</span></div>
@@ -5432,7 +5432,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_5kaapu">
+                                        <div class="flex-items-center">
                                           <div class="_1mqc21n"><input aria-labelledby="phone_call-row-title"
                                               aria-describedby="phone_call-row-subtitle"
                                               id="phone_call-row-radio-button" class="_83s1a2" type="radio"
